fixed spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -25,7 +25,7 @@ h1 {
 form {
     display: flex;
     flex: center;
-    width: 79%;
+    width: 80%;
     gap: 20px;
     margin: 20px 0 20px 0;
 }
